# reflection-cpp

./: .clang-format  .gitignore  .vimspector.json  CMakeLists.txt  CMakePresets.json  README.md  reflection-cpp-config.cmake.in  test-reflection-cpp.cpp  vcpkg.json
.github/workflows/: main.yml
cmake/: ThirdParties.cmake
include/reflection-cpp/: Reflection.hpp  reflection.hpp
